fixed fault in css leading to bad Snake render on mobile

--- a/styling/styles.scss
+++ b/styling/styles.scss
@@ -2372,7 +2372,7 @@ div.fadeIn {
 @media screen and (max-width: 480px) {
   #snake-canvas {
     height: 324px;
-    width: 34px;
+    width: 324px;
   }
 }
 
